encoding problem through cmd is fixed